[gd_scene format=3 uid="uid://bonixfxxxhu5g"]

[ext_resource type="Script" uid="uid://cwx20a13mtwu4" path="res://Scripts/profile_scene.gd" id="1_ywluw"]

[node name="ProfileScene" type="Control" unique_id=2032689436]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ywluw")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=309747501]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=137008584]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1767303463]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header" unique_id=1700666423]
layout_mode = 2

[node name="ProfilePicture" type="TextureRect" parent="MarginContainer/VBoxContainer/Header/VBoxContainer2" unique_id=884705415]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
stretch_mode = 5

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/Header/VBoxContainer2" unique_id=1044440947]
layout_mode = 2
size_flags_horizontal = 3
text = "Change photo"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header" unique_id=315918411]
layout_mode = 2
size_flags_horizontal = 3

[node name="Username" type="Label" parent="MarginContainer/VBoxContainer/Header/VBoxContainer" unique_id=620685121]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="DescriptionEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/Header/VBoxContainer" unique_id=757268125]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2

[node name="SaveProfileBtn" type="Button" parent="MarginContainer/VBoxContainer/Header/VBoxContainer" unique_id=827260029]
layout_mode = 2
text = "Save Profile"

[node name="Seens" type="Label" parent="MarginContainer/VBoxContainer" unique_id=65436297]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer" unique_id=681930604]
layout_mode = 2
size_flags_vertical = 3

[node name="SeenListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer" unique_id=1269607017]
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="." unique_id=675814586]
title = "Open a File"
file_mode = 0
access = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/VBoxContainer2/Button" to="." method="_on_ChangePictureBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/VBoxContainer/SaveProfileBtn" to="." method="_on_SaveProfileBtn_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
